# synth-desktop

./: .dockerignore  LICENSE  README.md  docker-compose.yml  package.json  tsconfig.electron.json  tsconfig.json  webpack.config.js
public/: index.html
synth-engine/: Cargo.toml
